--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="discription" content="This webpage is for presenting DDS lab reoprt of group 9">
+    <meta name="keywords" content="dds, dds-lab, nitk-dds">
+    <meta name="author" content="Group-9">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
