question page added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="discription" content="This webpage is for presenting DDS lab reoprt of group 9">
+    <meta name="description" content="This webpage is for presenting DDS lab reoprt of group 9">
     <meta name="keywords" content="dds, dds-lab, nitk-dds">
     <meta name="author" content="Group-9">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,7 +89,9 @@
         </div>
 
         <div class="absolute top-1/2 right-6">
-            <i class='bx bxs-log-in-circle text-gray-300 text-3xl hover:text-gray-400 cursor-pointer'></i>
+            <a href="./question.html">
+                <i class='bx bxs-log-in-circle text-gray-400 text-4xl hover:text-gray-500 cursor-pointer'></i>
+            </a>
         </div>
     </div>
 </body>
