--- a/question.html
+++ b/question.html
@@ -32,7 +32,7 @@
         <h1 class="text-center font-semibold font-lora text-lg uppercase ">CS203- Design of Digital System Laboratory
         </h1>
         <div class="absolute text-2xl right-4 text-gray-400">
-            <a class="mr-3" href="./index.html">
+            <a class="mr-3" href="#">
                 <i class='bx bxs-home-smile text-gray-600'></i>
             </a>
             <a href="./report.html">
@@ -42,7 +42,7 @@
     </div>
 
     <!-- ===== Question ===== -->
-    <div class="flex justify-center items-center" style="height: calc(100vh - 4rem);">
+    <div class="flex justify-center items-center" style="height: calc(100vh - 4rem)">
         <div class="bg-white py-14 px-10 text-center font-roboto shadow-xl rounded-xl">
             <p class="text-sm mb-1 tracking-widest">Problem - 9</p>
             <hr class="w-3/5 h-0.5 mx-auto bg-gray-300">
