--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
 
                     <div>
-                        <p class="uppercase text-s font-roboto">Aniketh Bellala</p>
+                        <p class="uppercase text-s font-roboto">aniketh narayan bellala</p>
                         <p class="text-sm font-light">201CS108</p>
                     </div>
                 </div>
