--- a/report.html
+++ b/report.html
@@ -43,15 +43,17 @@
 
     <!--  -->
     <div class="relative w-full" style="height: calc(100vh - 4rem)">
-        <div class="h-4/5 w-2/12 left-4 bg-white flex flex-col justify-center items-center space-y-5 uppercase font-roboto absolute shadow-lg rounded-xl" style="top: 50%; transform: translateY(-50%);">
+        <div class="h-4/5 w-2/12 left-4 bg-white flex flex-col justify-center items-center space-y-5 uppercase font-roboto absolute shadow-lg rounded-xl"
+            style="top: 50%; transform: translateY(-50%);">
             <a class="block" href="#">Aim</a>
             <a class="block" href="#">Theory</a>
             <a class="block" href="#">Procedure</a>
-            <a class="block" href="#">Simulation</a>
+            <a class="block" href="./simulator.html">Simulation</a>
             <a class="block" href="#">Reference</a>
         </div>
 
-        <div class="bg-white rounded-xl flex justify-center items-center shadow-xl absolute right-4" style="height: 90%; width: 78%; top: 50%; transform: translateY(-50%)">
+        <div class="bg-white rounded-xl flex justify-center items-center shadow-xl absolute right-4"
+            style="height: 90%; width: 78%; top: 50%; transform: translateY(-50%)">
             <p class="text-5xl">Under Maintenance</p>
         </div>
     </div>
