Shift fronts link from html to css file

--- a/simulator.html
+++ b/simulator.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="This webpage is for presenting question">
+    <meta name="description" content="This webpage is for simulator">
     <meta name="keywords" content="dds, dds-lab, nitk-dds">
     <meta name="author" content="Group-9">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +11,6 @@
 
     <!-- ===== BOX ICON ===== -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
-    <!-- ===== Fonts ===== -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=Roboto:wght@400;500&display=swap"
-        rel="stylesheet">
 
     <!-- ===== CSS ======  -->
     <link rel="stylesheet" href="./output/tailwind.css">
@@ -38,8 +32,10 @@
         </div>
     </div>
 
-    <!--  -->
+    <!-- ===== Home ===== -->
     <div class="relative w-full" style="height: calc(100vh - 4rem)">
+
+        <!-- ===== Input ===== -->
         <div class="w-6/12 left-4 bg-white absolute shadow-lg rounded-xl"
             style="top: 50%; transform: translateY(-50%);">
             <div class="h-full my-5  font-lora flex flex-col items-center justify-center">
@@ -63,6 +59,7 @@
             </div>
         </div>
 
+        <!-- ===== Truth Table ===== -->
         <div class="w-5/12 overflow-y-auto font-lora bg-white rounded-xl shadow-xl absolute right-4"
             style="height: 90%; top: 50%; transform: translateY(-50%)">
 
