--- a/simulator.html
+++ b/simulator.html
@@ -37,9 +37,9 @@
 
         <!-- ===== Input ===== -->
         <div class="w-6/12 left-4 bg-white absolute shadow-lg rounded-xl"
-            style="top: 50%; transform: translateY(-50%);">
-            <div class="h-full my-5  font-lora flex flex-col items-center justify-center">
-                <img class="w-3/4" src="./img/ha1.png">
+            style="height: 90%; top: 50%; transform: translateY(-50%);">
+            <div class="h-full font-lora flex flex-col items-center justify-center">
+                <img class="w-3/6" src="./img/ha1.png">
                 <div class="mt-5">
                     <input type="text" id="x" class="w-10 bg-green-200 text-center rounded-sm" placeholder="x">
                     <input type="text" id="y" class="w-10 bg-green-200 text-center rounded-sm" placeholder="y">
