simulator two added

--- a/question.html
+++ b/question.html
@@ -25,12 +25,9 @@
     <div class="h-16 bg-white shadow-xl flex items-center justify-center relative">
         <h1 class="text-center font-semibold font-lora text-lg uppercase ">CS203- Design of Digital System Laboratory
         </h1>
-        <div class="absolute text-2xl right-4 text-gray-400">
-            <a class="mr-3" href="#">
-                <i class='bx bxs-home-smile text-gray-600'></i>
-            </a>
-            <a href="./report.html">
-                <i class='bx bxs-report hover:text-gray-500'></i>
+        <div class="absolute right-4 space-x-2 text-gray-400">
+            <a class="hover:text-gray-500 hover:font-semibold" href="./report.html">Report</a>
+            <a class="text-gray-500 font-semibold" href="./question.html">Home
             </a>
         </div>
     </div>
