--- a/report.html
+++ b/report.html
@@ -9,9 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- ===== BOX ICON ===== -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
     <!-- ===== CSS ======  -->
     <link rel="stylesheet" href="./output/tailwind.css">
 
@@ -25,12 +22,9 @@
     <div class="h-16 bg-white shadow-lg flex items-center justify-center relative">
         <h1 class="text-center font-semibold font-lora text-lg uppercase ">CS203- Design of Digital System Laboratory
         </h1>
-        <div class="absolute text-2xl right-4 text-gray-400">
-            <a class="mr-3" href="./question.html">
-                <i class='bx bxs-home-smile  hover:text-gray-500'></i>
-            </a>
-            <a href="#">
-                <i class='bx bxs-report text-gray-600'></i>
+        <div class="absolute right-4 space-x-2 text-gray-400">
+            <a class="text-gray-500 font-semibold" href="./report.html">Report</a>
+            <a class="hover:text-gray-500 hover:font-semibold" href="./question.html">Home
             </a>
         </div>
     </div>
@@ -38,12 +32,11 @@
     <!--  -->
     <div class="relative w-full" style="height: calc(100vh - 4rem)">
         <div class="h-4/5 w-2/12 left-4 bg-white flex flex-col justify-center items-center space-y-5 uppercase font-lora absolute shadow-lg rounded-xl"
-            style="top: 50%; transform: translateY(-50%);">
+            style="height: 90%; top: 50%; transform: translateY(-50%);">
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#aim">Aim</a>
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#theory">Theory</a>
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#procedure">Procedure</a>
-            <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100"
-                href="./simulator.html">Simulation</a>
+            <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="./simulator.html">Simulation</a>
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#reference">Reference</a>
         </div>
 
@@ -179,12 +172,26 @@
                 <!-- ===== Procedure ===== -->
                 <section class="mb-5" id="procedure">
                     <h2 class="font-bold text-lg">Procedure</h2>
-                    <p>Step - 1: Give the input of x and y. Here x and y can be either 0 or 1.</p>
-                    <p>Step - 2: If you want to enable fault in any position, I.e., faults on a, b, c, d, e, f, g, or on
-                        position h - input fault type.</p>
-                    <p>Step - 3: For SA0 - give input 0; for SA1 - input should be 1.</p>
-                    <p>Step - 4: Click on the Check button to get the result on the truth table. </p>
-                    <p>Step - 5: For further simulation - repeat steps from 1 to 4.</p>
+                    <div class="mt-2">
+                        <h2 class="font-semibold">Simulator One</h2>
+                        <p>Find out the output for SA0 or SA1 faults on a specific position - </p>
+                        <p>Step - 1: Give the input of x and y. Here x and y can be either 0 or 1.</p>
+                        <p>Step - 2: If you want to enable fault in any position, I.e., faults on a, b, c, d, e, f, g,
+                            or on
+                            position h - input fault type.</p>
+                        <p>Step - 3: For SA0 - give input 0; for SA1 - input should be 1.</p>
+                        <p>Step - 4: Click on the Check button to get the result on the truth table. </p>
+                        <p>Step - 5: For further simulation - repeat steps from 1 to 4.</p>
+                    </div>
+                    <div class="mt-2">
+                        <h2 class="font-semibold">Simulator Two</h2>
+                        <p>Find out the position of faults for a specific output - </p>
+                        <p>Step - 1: Expected output - give the input of s and c. Here x and y can be either 0 or 1.</p>
+                        <p>Step - 2: Faulty output - give your final output on s' anf c'. </p>
+                        <p>Step - 3: Click on Check button</p>
+                        <p>Step - 4: If any faults occur that will be shown on faults coulmn.</p>
+                        <p>Step - 5: For further simulation - repeat steps from 1 to 3.</p>
+                    </div>
                 </section>
 
                 <!-- ===== Reference ===== -->
