--- a/simulator_2.html
+++ b/simulator_2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="This webpage is for simulator one">
+    <meta name="description" content="This webpage is for simulator">
     <meta name="keywords" content="dds, dds-lab, nitk-dds">
     <meta name="author" content="Group-9">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./output/tailwind.css">
 
     <!-- ===== Title ===== -->
-    <title>Simulator One - Group 9</title>
+    <title>Simulator Two - Group 9</title>
 </head>
 
 <body class="h-screen bg-gray-100">
@@ -23,8 +23,8 @@
         <h1 class="text-center font-semibold font-lora text-lg uppercase ">SA0 & SA1 Fault of Half Adder
         </h1>
         <div class="absolute right-4 space-x-2 text-gray-400">
-            <a class="text-gray-500 font-semibold" href="./simulator.html">Simulator-1</a>
-            <a class="hover:text-gray-500 hover:font-semibold" href="./simulator_2.html">Simulator-2</a>
+            <a class="hover:text-gray-500 hover:font-semibold" href="./simulator.html">Simulator-1</a>
+            <a class="text-gray-500 font-semibold" href="./simulator_2.html">Simulator-2</a>
             <a class="hover:text-gray-500 hover:font-semibold" href="./question.html">Home
             </a>
         </div>
@@ -39,19 +39,13 @@
             <div class="h-full font-lora flex flex-col items-center justify-center">
                 <img class="w-3/6" src="./img/ha1.png">
                 <div class="mt-5">
-                    <input type="text" id="x" class="w-10 bg-green-200 text-center rounded-sm" placeholder="x">
-                    <input type="text" id="y" class="w-10 bg-green-200 text-center rounded-sm" placeholder="y">
+                    <input type="text" id="s" class="w-10 bg-green-200 text-center rounded-sm" placeholder="S">
+                    <input type="text" id="c" class="w-10 bg-green-200 text-center rounded-sm" placeholder="C">
                 </div>
 
                 <div class="text-center my-5">
-                    <input type="text" id="a" class="w-10 bg-red-200 text-center rounded-sm" placeholder="a">
-                    <input type="text" id="b" class="w-10 bg-red-200 text-center rounded-sm" placeholder="b">
-                    <input type="text" id="c" class="w-10 bg-red-200 text-center rounded-sm" placeholder="c">
-                    <input type="text" id="d" class="w-10 bg-red-200 text-center rounded-sm" placeholder="d">
-                    <input type="text" id="e" class="w-10 bg-red-200 text-center rounded-sm" placeholder="e">
-                    <input type="text" id="f" class="w-10 bg-red-200 text-center rounded-sm" placeholder="f">
-                    <input type="text" id="g" class="w-10 bg-red-200 text-center rounded-sm" placeholder="g">
-                    <input type="text" id="h" class="w-10 bg-red-200 text-center rounded-sm" placeholder="h">
+                    <input type="text" id="s_bar" class="w-10 bg-red-200 text-center rounded-sm" placeholder="S'">
+                    <input type="text" id="c_bar" class="w-10 bg-red-200 text-center rounded-sm" placeholder="C'">
                 </div>
                 <button id="check-btn"
                     class="py-1 px-4 rounded-md text-gray-800 font-semibold bg-yellow-400 hover:bg-yellow-300">Check</button>
@@ -65,19 +59,18 @@
             <div class="m-5">
                 <p class="text-center font-semibold mb-1">Truth Table</p>
                 <hr class="w-4/5 h-0.5 mx-auto bg-gray-300 mb-3">
-                <table id="section-to-print" class="w-full table border text-center">
+                <table class="w-full table border text-center">
                     <tbody id="table-body">
                         <tr>
-                            <th rowspan="2" class="border px-5 border-gray-400">x y</th>
-                            <th rowspan="2" class="border border-gray-400">Faults</th>
                             <th colspan="2" class="border border-gray-400">Expected Output</th>
                             <th colspan="2" class="border border-gray-400">Final Output</th>
+                            <th rowspan="2" class="border border-gray-400">Faults</th>
                         </tr>
                         <tr>
                             <td class="border border-gray-400">s</td>
                             <td class="border border-gray-400">c</td>
-                            <td class="border border-gray-400">s</td>
-                            <td class="border border-gray-400">c</td>
+                            <td class="border border-gray-400">s'</td>
+                            <td class="border border-gray-400">c'</td>
                         </tr>
                     </tbody>
                 </table>
@@ -85,7 +78,7 @@
         </div>
     </div>
 
-    <script src="./js/simulator.js"></script>
+    <script src="./js/simulator_2.js"></script>
 </body>
 
 </html>
