--- a/report.html
+++ b/report.html
@@ -179,14 +179,14 @@
                         <p>Step - 2: If you want to enable fault in any position, I.e., faults on a, b, c, d, e, f, g,
                             or on
                             position h - input fault type.</p>
-                        <p>Step - 3: For SA0 - give input 0; for SA1 - input should be 1.</p>
+                        <p>Step - 3: For SA0 - fault type should be 0; for SA1 - it should be 1.</p>
                         <p>Step - 4: Click on the Check button to get the result on the truth table. </p>
                         <p>Step - 5: For further simulation - repeat steps from 1 to 4.</p>
                     </div>
                     <div class="mt-2">
                         <h2 class="font-semibold">Simulator Two</h2>
-                        <p>Find out the position of faults for a specific output - </p>
-                        <p>Step - 1: Expected output - give the input of s and c. Here x and y can be either 0 or 1.</p>
+                        <p>Find out the possible position of faults for a specific faulty output - </p>
+                        <p>Step - 1: Expected output - give the input of s and c. Here s and c can be either 0 or 1.</p>
                         <p>Step - 2: Faulty output - give your final output on s' anf c'. </p>
                         <p>Step - 3: Click on Check button</p>
                         <p>Step - 4: If any faults occur that will be shown on faults coulmn.</p>
