--- a/simulator_2.html
+++ b/simulator_2.html
@@ -64,7 +64,7 @@
                         <tr>
                             <th colspan="2" class="border border-gray-400">Expected Output</th>
                             <th colspan="2" class="border border-gray-400">Final Output</th>
-                            <th rowspan="2" class="border border-gray-400">Faults</th>
+                            <th rowspan="2" class="border border-gray-400">Possible Fault Position</th>
                         </tr>
                         <tr>
                             <td class="border border-gray-400">s</td>
