--- a/report.html
+++ b/report.html
@@ -23,9 +23,10 @@
         <h1 class="text-center font-semibold font-lora text-lg uppercase ">CS203- Design of Digital System Laboratory
         </h1>
         <div class="absolute right-4 space-x-2 text-gray-400">
-            <a class="text-gray-500 font-semibold" href="./report.html">Report</a>
-            <a class="hover:text-gray-500 hover:font-semibold" href="./question.html">Home
+            <a class="hover:text-gray-500 hover:font-semibold" href="./index.html">Home
             </a>
+            <a class="text-gray-500 font-semibold" href="./report.html">Report</a>
+            <a class="hover:text-gray-500 hover:font-semibold" href="./simulator.html">Simulator</a>
         </div>
     </div>
 
@@ -36,7 +37,6 @@
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#aim">Aim</a>
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#theory">Theory</a>
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#procedure">Procedure</a>
-            <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="./simulator.html">Simulation</a>
             <a class="block rounded-md bg-green-50 w-4/5 pl-2 hover:bg-green-100" href="#reference">Reference</a>
         </div>
 
@@ -152,7 +152,7 @@
                     </p>
                     <div class="bg-green-50 p-2 rounded-sm">
                         <p class="text-center font-bold">
-                            S = xy’ + x’y
+                            S = x ⊕ y
                         </p>
                         <p class="text-center font-bold">
                             C = xy
@@ -173,7 +173,6 @@
                 <section class="mb-5" id="procedure">
                     <h2 class="font-bold text-lg">Procedure</h2>
                     <div class="mt-2">
-                        <h2 class="font-semibold">Simulator One</h2>
                         <p>Find out the output for SA0 or SA1 faults on a specific position - </p>
                         <p>Step - 1: Give the input of x and y. Here x and y can be either 0 or 1.</p>
                         <p>Step - 2: If you want to enable fault in any position, I.e., faults on a, b, c, d, e, f, g,
@@ -182,15 +181,6 @@
                         <p>Step - 3: For SA0 - fault type should be 0; for SA1 - it should be 1.</p>
                         <p>Step - 4: Click on the Check button to get the result on the truth table. </p>
                         <p>Step - 5: For further simulation - repeat steps from 1 to 4.</p>
-                    </div>
-                    <div class="mt-2">
-                        <h2 class="font-semibold">Simulator Two</h2>
-                        <p>Find out the possible position of faults for a specific faulty output - </p>
-                        <p>Step - 1: Expected output - give the input of s and c. Here s and c can be either 0 or 1.</p>
-                        <p>Step - 2: Faulty output - give your final output on s' anf c'. </p>
-                        <p>Step - 3: Click on Check button</p>
-                        <p>Step - 4: If any faults occur that will be shown on faults coulmn.</p>
-                        <p>Step - 5: For further simulation - repeat steps from 1 to 3.</p>
                     </div>
                 </section>
 
