--- a/simulator.html
+++ b/simulator.html
@@ -23,10 +23,10 @@
         <h1 class="text-center font-semibold font-lora text-lg uppercase ">SA0 & SA1 Fault of Half Adder
         </h1>
         <div class="absolute right-4 space-x-2 text-gray-400">
-            <a class="text-gray-500 font-semibold" href="./simulator.html">Simulator-1</a>
-            <a class="hover:text-gray-500 hover:font-semibold" href="./simulator_2.html">Simulator-2</a>
-            <a class="hover:text-gray-500 hover:font-semibold" href="./question.html">Home
+            <a class="hover:text-gray-500 hover:font-semibold" href="./index.html">Home
             </a>
+            <a class="hover:text-gray-500 hover:font-semibold" href="./report.html">Report</a>
+            <a class="text-gray-500 font-semibold" href="./simulator.html">Simulator</a>
         </div>
     </div>
 
